--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "bower": "^1.7.7",
     "browser-sync": "^2.11.1",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.1.1"
   }
