--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "egillcv",
-  "description": "Curriculum vitae of Egill Ian Guðmundsson",
-  "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "express": "^4.5.1",
+    "serve-static": "^1.3.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "browser-sync": "^2.18.6",
+    "gulp": "^3.8.6",
+    "gulp-nodemon": "^1.0.4",
+    "gulp-sass": "^3.1.0"
   }
 }
