--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "private": true,
   "dependencies": {
     "express": "^4.5.1",
+    "pug": "^2.0.0-beta9",
     "serve-static": "^1.3.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.6",
     "gulp": "^3.8.6",
     "gulp-nodemon": "^1.0.4",
+    "gulp-pug": "^3.2.0",
     "gulp-sass": "^3.1.0"
   }
 }
